--- a/pruebaPlanilla23/Views/TipodeHorario/Index.cshtml
+++ b/pruebaPlanilla23/Views/TipodeHorario/Index.cshtml
@@ -44,10 +44,9 @@
 						</td>
 						<td class="text-end">
 							<div class="btn-group" role="group">
-								<a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-sm btn-success">Editar</a>
+								<a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-sm btn-success">Agregar Dias</a>
 								<a asp-action="Details" asp-route-id="@item.Id" class="btn btn-sm btn-primary">Detalle</a>
 								<a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-sm btn-danger">Eliminar</a>
-								<a asp-controller="Horario" asp-action="Create" asp-route-id="@item.Id" class="btn btn-sm btn-warning">Horario</a>
 							</div>
 						</td>
 					</tr>
