--- a/pruebaPlanilla23/Views/Shared/_Layout.cshtml
+++ b/pruebaPlanilla23/Views/Shared/_Layout.cshtml
@@ -28,6 +28,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="PuestoTrabajo" asp-action="Index">Puesto Trabajo</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="TipodeHorario" asp-action="Index">Puesto Trabajo</a>
+                        </li>
                     </ul>
                 </div>
             </div>
