Se configuro el layout para agregar en el menú la  sección de Administración de empleados.

--- a/pruebaPlanilla23/Views/Shared/_Layout.cshtml
+++ b/pruebaPlanilla23/Views/Shared/_Layout.cshtml
@@ -29,7 +29,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="PuestoTrabajo" asp-action="Index">Puesto Trabajo</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="TipodeHorario" asp-action="Index">Puesto Trabajo</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="TipodeHorario" asp-action="Index">Tipo de Horarios</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Empleado" asp-action="Index">Administración Empleados</a>
                         </li>
                     </ul>
                 </div>
