--- a/pruebaPlanilla23/Views/Empleado/Create.cshtml
+++ b/pruebaPlanilla23/Views/Empleado/Create.cshtml
@@ -4,97 +4,111 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
-
-<h4>Empleado</h4>
+<h1 class="text-center" style="font-family:'Cambria Math'">Agregar un Nuevo Empleado</h1>
+<h4 class="text-center text-muted" style="font-family:'Cambria Math'">Empleado</h4>
 <hr />
-<div class="row">
-    <div class="col-md-4">
+<div class="row justify-content-center">
+    <div class="col-md-6">
+        <div class="card shadow-lg p-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
-            <div class="form-group">
-                <label asp-for="Dui" class="control-label"></label>
-                <input asp-for="Dui" class="form-control" />
-                <span asp-validation-for="Dui" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Nombre" class="control-label"></label>
-                <input asp-for="Nombre" class="form-control" />
+                <div class=" col-md-6 mb-3">
+                    <label asp-for="Dui" class="form-label fw-bold"></label>
+                    <input asp-for="Dui" class="form-control" placeholder="Ingrese el dui del empleado" />
+                    <span asp-validation-for="Dui" class="text-danger"></span>
+                </div>
+
+            <div class="row">
+                 
+            <div class="col-md-6 mb-4">
+                        <label asp-for="Nombre" class="form-label fw-bold"></label>
+                        <input asp-for="Nombre" class="form-control" placeholder="Ingrese el nombre del empleado" />
                 <span asp-validation-for="Nombre" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Apellido" class="control-label"></label>
-                <input asp-for="Apellido" class="form-control" />
+            <div class="col-md-6 mb-3">
+                        <label asp-for="Apellido" class="form-label fw-bold"></label>
+                        <input asp-for="Apellido" class="form-control" placeholder="Ingrese el apellido del empleado" />
                 <span asp-validation-for="Apellido" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Telefono" class="control-label"></label>
-                <input asp-for="Telefono" class="form-control" />
+            <div class="col-md-6 mb-4">
+                        <label asp-for="Telefono" class="form-label fw-bold"></label>
+                        <input asp-for="Telefono" class="form-control" type="number" placeholder="Ingrese el telefono del empleado" />
                 <span asp-validation-for="Telefono" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Correo" class="control-label"></label>
-                <input asp-for="Correo" class="form-control" />
+            <div class="col-md-6 mb-3">
+                        <label asp-for="Correo" class="form-label fw-bold"></label>
+                        <input asp-for="Correo" class="form-control" placeholder="Ingrese el correo del empleado" />
                 <span asp-validation-for="Correo" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Estado" class="control-label"></label>
-                <select asp-for="Estado" class="form-control">
-                    <option value="1">Activo</option>
-                    <option value="0">Inactivo</option>
-                </select>
-                <span asp-validation-for="Estado" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="FechaContraInicial" class="control-label"></label>
-                <input asp-for="FechaContraInicial" class="form-control" type="date" />
-                <span asp-validation-for="FechaContraInicial" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="FechaContraFinal" class="control-label"></label>
-                <input asp-for="FechaContraFinal" class="form-control" type="date" />
-                <span asp-validation-for="FechaContraFinal" class="text-danger"></span>
-            </div>
+                    <div class="col-md-6 mb-3">
+                        <label asp-for="FechaContraInicial" class="form-label fw-bold"></label>
+                        <input asp-for="FechaContraInicial" class="form-control" type="date" />
+                        <span asp-validation-for="FechaContraInicial" class="text-danger"></span>
+                    </div>
+                    <div class="col-md-6 mb-4">
+                        <label asp-for="FechaContraFinal" class="form-label fw-bold"></label>
+                        <input asp-for="FechaContraFinal" class="form-control" type="date" />
+                        <span asp-validation-for="FechaContraFinal" class="text-danger"></span>
+                    </div>
 
+                </div>
+
+            <div class="row">
+
+                    <div class="col-md-6 mb-3">
+                        <label asp-for="SalarioBase" class="form-label fw-bold"></label>
+                        <input asp-for="SalarioBase" class="form-control" id="salarioBaseInput" readonly />
+                        <span asp-validation-for="SalarioBase" class="text-danger"></span>
+                    </div>
+
+                </div>
           
-            <div class="form-group">
-                <label asp-for="PuestoTrabajoId" class="control-label"></label>
-                <select asp-for="PuestoTrabajoId" class="form-control" asp-items="ViewBag.PuestoTrabajoId" id="puestoTrabajoSelect">
-                    <option value="">-- Seleccione un puesto --</option>
-                </select>
-                <span asp-validation-for="PuestoTrabajoId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="SalarioBase" class="control-label"></label>
-                <input asp-for="SalarioBase" class="form-control" id="salarioBaseInput" readonly />
-                <span asp-validation-for="SalarioBase" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="JefeInmediatoId" class="control-label"></label>
-                <select asp-for="JefeInmediatoId" class="form-control" asp-items="ViewBag.JefeInmediatoId" id="jefeInmediatoSelect">
-                    <option value="">-- Seleccione un jefe --</option>
-                </select>
-                <span asp-validation-for="JefeInmediatoId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="TipoDeHorarioId" class="control-label"></label>
-                <select asp-for="TipoDeHorarioId" class="form-control" asp-items="ViewBag.TipoDeHorarioId">
-                    <option value="">-- Seleccione un horario --</option>
-                </select>
-                <span asp-validation-for="TipoDeHorarioId" class="text-danger"></span>
-            </div>
+            <div class="row">
+                    <div class="col-md-6 mb-4">
+                        <label asp-for="PuestoTrabajoId" class="form-label fw-bold"></label>
+                        <select asp-for="PuestoTrabajoId" class="form-control" asp-items="ViewBag.PuestoTrabajoId" id="puestoTrabajoSelect">
+                            <option value="">-- Seleccione un puesto --</option>
+                        </select>
+                        <span asp-validation-for="PuestoTrabajoId" class="text-danger"></span>
+                    </div>
 
-            <div class="form-group">
-                <label asp-for="Usuario" class="control-label"></label>
+                    <div class="col-md-6 mb-4">
+                        <label asp-for="Estado" class="form-label fw-bold"></label>
+                        <select asp-for="Estado" class="form-control" asp-items="ViewBag.Estados">
+                            <option value="">-- Seleccione un estado --</option>
+                        </select>
+                        <span asp-validation-for="Estado" class="text-danger"></span>
+                    </div>
+
+                    <div class="col-md-6 mb-4">
+                        <label asp-for="JefeInmediatoId" class="form-label fw-bold"></label>
+                        <select asp-for="JefeInmediatoId" class="form-control" asp-items="ViewBag.JefeInmediatoId" id="jefeInmediatoSelect">
+                            <option value="">-- Seleccione un jefe --</option>
+                        </select>
+                        <span asp-validation-for="JefeInmediatoId" class="text-danger"></span>
+                    </div>
+                    <div class="col-md-6 mb-3">
+                        <label asp-for="TipoDeHorarioId" class="form-label fw-bold"></label>
+                        <select asp-for="TipoDeHorarioId" class="form-control" asp-items="ViewBag.TipoDeHorarioId">
+                            <option value="">-- Seleccione un horario --</option>
+                        </select>
+                        <span asp-validation-for="TipoDeHorarioId" class="text-danger"></span>
+                    </div>
+                </div>
+
+            <div class="row">
+              <div class="col-md-6 mb-3">
+                 <label asp-for="Usuario" class="form-label fw-bold"></label>
                 <input asp-for="Usuario" class="form-control" id="usuarioInput" disabled />
                 <span asp-validation-for="Usuario" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Contraseña" class="control-label"></label>
+               <div class="col-md-6 mb-4">
+                <label asp-for="Contraseña" class="form-label fw-bold"></label>
                 <input asp-for="Contraseña" class="form-control" id="contraseñaInput" type="password" disabled />
                 <span asp-validation-for="Contraseña" class="text-danger"></span>
             </div>
+                </div>
 
             <hr />
             <!-- Script para habilitar o deshabilitar Usuario y Contraseña dinámicamente -->
@@ -189,15 +203,14 @@
 
          
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Crear" class="btn btn-dark btn-sm" />
+                    <a asp-action="Index" class="btn btn-secondary btn-sm">Volver</a>
             </div>
         </form>
+        </div>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
