modificación de la vista edit en el encabezado y modificación de la vista detalle de empleados

--- a/pruebaPlanilla23/Views/Empleado/Edit.cshtml
+++ b/pruebaPlanilla23/Views/Empleado/Edit.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1 class="text-center" style="font-family:'Cambria Math'">Agregar un Nuevo Empleado</h1>
+<h1 class="text-center" style="font-family:'Cambria Math'">Editar un Empleado</h1>
 <h4 class="text-center text-muted" style="font-family:'Cambria Math'">Empleado</h4>
 <hr />
 <div class="row justify-content-center">
