Se modificaron las vistas del controlador empleado, en la sección de los botones

--- a/pruebaPlanilla23/Views/Empleado/Details.cshtml
+++ b/pruebaPlanilla23/Views/Empleado/Details.cshtml
@@ -100,8 +100,8 @@
             </dl>
 
             <div class="d-flex justify-content-between mt-4">
-                <a asp-action="Edit" asp-route-id="@Model?.Id" class="btn btn-dark btn-sm">Editar</a>
-                <a asp-action="Index" class="btn btn-secondary btn-sm">Volver</a>
+                <a asp-action="Edit" asp-route-id="@Model?.Id" class="btn btn-warning btn-sm">Editar</a>
+                <a asp-action="Index" class="btn btn-dark btn-sm">Volver</a>
             </div>
         </div>
      </div>
