--- a/pruebaPlanilla23/Views/Empleado/Index.cshtml
+++ b/pruebaPlanilla23/Views/Empleado/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Index";
 }
 
-<h1 class="display-4" style="font-family:'Cambria Math'">Buscar Empleados</h1>
+<h1 class="display-4 text-center" style="font-family:'Cambria Math'">Buscar Empleados</h1>
 <form asp-action="Index">
     <div class="card">
         <div class="card-header">
