--- a/pruebaPlanilla23/Views/Empleado/Create.cshtml
+++ b/pruebaPlanilla23/Views/Empleado/Create.cshtml
@@ -203,8 +203,8 @@
 
          
             <div class="form-group">
-                <input type="submit" value="Crear" class="btn btn-dark btn-sm" />
-                    <a asp-action="Index" class="btn btn-secondary btn-sm">Volver</a>
+                <input type="submit" value="Crear" class="btn btn-info btn-sm" />
+                    <a asp-action="Index" class="btn btn-dark btn-sm">Volver</a>
             </div>
         </form>
         </div>
