--- a/pruebaPlanilla23/Views/Empleado/Edit.cshtml
+++ b/pruebaPlanilla23/Views/Empleado/Edit.cshtml
@@ -205,9 +205,9 @@
                     });
                 </script>
 
-            <div class="form-group">
-                <input type="submit" value="Guardar" class="btn btn-dark btn-sm" />
-                    <a asp-action="Index" class="btn btn-secondary btn-sm">Volver</a>
+                <div class="d-flex justify-content-between mt-4">
+                    <input type="submit" value="Guardar" class="btn btn-warning btn-sm" />
+                    <a asp-action="Index" class="btn btn-dark btn-sm">Volver</a>
             </div>
         </form>
         </div>
