--- a/pruebaPlanilla23/Views/Empleado/Index.cshtml
+++ b/pruebaPlanilla23/Views/Empleado/Index.cshtml
@@ -76,7 +76,7 @@
             <br />
             <div class="col-12">
                 <input type="submit" value="Buscar" class="btn btn-dark btn-sm" />
-                <a asp-action="Create" class="btn btn-info btn-sm">Crar Nuevo Empleado!!</a>
+                <a asp-action="Create" class="btn btn-secondary btn-sm">Crar Nuevo Empleado!!</a>
             </div>
         </div>
     </div>
