Se editaron las vistas y el ccontrolador de empleados, para que apareciera el nombre del horario

--- a/pruebaPlanilla23/Views/Empleado/Create.cshtml
+++ b/pruebaPlanilla23/Views/Empleado/Create.cshtml
@@ -90,7 +90,7 @@
                     </div>
                     <div class="col-md-6 mb-3">
                         <label asp-for="TipoDeHorarioId" class="form-label fw-bold"></label>
-                        <select asp-for="TipoDeHorarioId" class="form-control" asp-items="ViewBag.TipoDeHorarioId">
+                        <select asp-for="TipoDeHorarioId" class="form-control" asp-items="ViewBag.NombreHorario">
                             <option value="">-- Seleccione un horario --</option>
                         </select>
                         <span asp-validation-for="TipoDeHorarioId" class="text-danger"></span>
